<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_setting_view_forum">官方论坛</string>
    <string name="about_setting_view_privacy_agreement">用户隐私协议</string>
    <string name="about_setting_view_uc">UC团队温情出品</string>
    <string name="about_setting_view_useragreement">软件许可</string>
    <string name="about_setting_view_webcore_info">基于创新无极限的 U4 %s内核</string>
    <string name="about_setting_window_function">功能介绍</string>
    <string name="about_setting_window_share">分享给好友</string>
    <string name="about_setting_window_title">关于</string>
    <string name="about_setting_window_upgrade">版本检查更新</string>
    <string name="about_version_prefix"></string>
    <string name="account_invalid_st">请重新登录</string>
    <string name="ad_block_block_mannual_switcher">广告标记</string>
    <string name="ad_block_rule_empty_view_text">没有已标识的广告</string>
    <string name="ad_block_rule_title_view_text">已添加的广告规则</string>
    <string name="ad_block_rule_view_delete_text">删除</string>
    <string name="ad_block_rule_window_title">广告过滤</string>
    <string name="add_favorite">收藏到夸克</string>
    <string name="allinnavi">精选站点</string>
    <string name="app_name">夸克浏览器</string>
    <string name="app_name_in_launcher">夸克浏览器</string>
    <string name="auth_request_tips">要求提供用户名和密码。您与此网站建立的不是私密连接。</string>
    <string name="bbs_name">夸克官方论坛</string>
    <string name="bookmark">书签</string>
    <string name="bookmark_add_error">无法收藏该网址!</string>
    <string name="bookmark_add_folder_fail">添加目录失败</string>
    <string name="bookmark_add_sucess">已经添加书签!</string>
    <string name="bookmark_add_to_nav">添加至导航</string>
    <string name="bookmark_backgroud_open">后台打开</string>
    <string name="bookmark_background_open_tips">已在后台打开</string>
    <string name="bookmark_cancel">取消</string>
    <string name="bookmark_cancel_classify">取消分类</string>
    <string name="bookmark_cancel_top_stick">取消置顶</string>
    <string name="bookmark_cloudbar_not_login">未登录</string>
    <string name="bookmark_cloudbar_not_sync">未同步</string>
    <string name="bookmark_cloudbar_title">云同步</string>
    <string name="bookmark_complete">完成</string>
    <string name="bookmark_delete">删除</string>
    <string name="bookmark_delete_tips">删除选中的%d个书签?</string>
    <string name="bookmark_edit">编辑</string>
    <string name="bookmark_edit_dir">编辑</string>
    <string name="bookmark_edit_url">编辑</string>
    <string name="bookmark_folder_not_null">文件夹名不能为空!</string>
    <string name="bookmark_history">书签历史</string>
    <string name="bookmark_more">更多</string>
    <string name="bookmark_move">分类</string>
    <string name="bookmark_new_folder">新建文件夹</string>
    <string name="bookmark_ok">确定</string>
    <string name="bookmark_revise_name">标题</string>
    <string name="bookmark_revise_web">网址</string>
    <string name="bookmark_save">保存</string>
    <string name="bookmark_save_bookmark_toast_text">保存刚复制的网址</string>
    <string name="bookmark_select_folder">选择需要移至的文件夹</string>
    <string name="bookmark_select_tips">已选中%d项书签</string>
    <string name="bookmark_share">分享</string>
    <string name="bookmark_to_favorites">收藏至:</string>
    <string name="bookmark_top_stick">置顶</string>
    <string name="broswse_setting_item_font_preview_text">今天我寒夜里看雪飘过\n怀著冷却了的心窝飘远方\n风雨里追赶 雾里分不清影踪\n天空海阔你与我 可会变</string>
    <string name="broswse_setting_item_tip_text_big">大</string>
    <string name="broswse_setting_item_tip_text_bigger">偏大</string>
    <string name="broswse_setting_item_tip_text_normal">标准</string>
    <string name="broswse_setting_item_tip_text_small">小</string>
    <string name="broswse_setting_item_tip_text_smaller">偏小</string>
    <string name="browse_setting_item_font_size">字体大小</string>
    <string name="browse_setting_item_no_image">智能无图</string>
    <string name="browser_form_not_save">不保存</string>
    <string name="browser_form_save">保存帐号</string>
    <string name="browser_form_save_tips">保存帐号信息，下次自动填写</string>
    <string name="browser_geolocation_permissions_message">需要获取您的地理位置</string>
    <string name="browser_geolocation_permissions_permit">允许</string>
    <string name="browser_geolocation_permissions_refuse">拒绝</string>
    <string name="browser_geolocation_permissions_title">获取地理位置信息</string>
    <string name="browser_setting_item_ad_block_rule">广告标记规则</string>
    <string name="browser_setting_item_smart_reader">智能拼页</string>
    <string name="cancel">取消</string>
    <string name="captcha_dialog_edittext_hint">输入图中的验证码</string>
    <string name="captcha_dialog_title_text">安全验证</string>
    <string name="choice_wallpaper">选择壁纸</string>
    <string name="click_to_see">点击查看</string>
    <string name="clip_board_title">剪贴板</string>
    <string name="cloud_sync">云同步</string>
    <string name="cloud_sync_account_empty">帐号信息为空，请先登录</string>
    <string name="cloud_sync_account_invalidate">账户无效</string>
    <string name="cloud_sync_account_no_network">需要在有网络环境中进行同步</string>
    <string name="cloud_sync_account_unlogin">账户未登录</string>
    <string name="cloud_sync_again_verif_code">重新获取</string>
    <string name="cloud_sync_exit">退出</string>
    <string name="cloud_sync_exit_cancel">取消</string>
    <string name="cloud_sync_exit_info">退出当前登录帐号?</string>
    <string name="cloud_sync_exit_ok">退出</string>
    <string name="cloud_sync_failure">同步失败</string>
    <string name="cloud_sync_failure_account_too_old">同步失败:账户过期，需重新登录</string>
    <string name="cloud_sync_get_verif_code">获取验证码</string>
    <string name="cloud_sync_import_browser">一键导入UC浏览器的书签数据</string>
    <string name="cloud_sync_not_yet">暂未同步</string>
    <string name="cloud_sync_other_login_ways">其他登录方式</string>
    <string name="cloud_sync_phone_error">手机号码不正确!</string>
    <string name="cloud_sync_phone_number">手机号码</string>
    <string name="cloud_sync_qq_login">QQ登录</string>
    <string name="cloud_sync_succ_time">同步成功时间:</string>
    <string name="cloud_sync_successful">同步成功</string>
    <string name="cloud_sync_sync">立即同步</string>
    <string name="cloud_sync_sync_content">允许同步的内容</string>
    <string name="cloud_sync_sync_desc">书签</string>
    <string name="cloud_sync_syncing">同步中</string>
    <string name="cloud_sync_verif_code">验证码</string>
    <string name="cloud_sync_wexin_login">微信登录</string>
    <string name="collect">添加书签</string>
    <string name="collected">已添加</string>
    <string name="common_adapt_screen">适应屏幕</string>
    <string name="common_adblock">广告过滤</string>
    <string name="common_advance_text">高级</string>
    <string name="common_browse_text">浏览</string>
    <string name="common_clear_cache">清除缓存</string>
    <string name="common_cloud_acceleration">云端加速</string>
    <string name="common_cloud_sync">云同步</string>
    <string name="common_crash_recovery">启动时恢复异常关闭页面</string>
    <string name="common_crash_recovery_disable">关闭</string>
    <string name="common_crash_recovery_disable_verb">关闭</string>
    <string name="common_crash_recovery_enable_always_asking">打开，恢复前询问</string>
    <string name="common_crash_recovery_enable_always_asking_verb">打开</string>
    <string name="common_crash_recovery_enable_auto_recovery">打开，自动恢复</string>
    <string name="common_crash_recovery_enable_auto_recovery_verb">打开</string>
    <string name="common_download_setting">下载设置</string>
    <string name="common_font_size">字体大小</string>
    <string name="common_normal_text">常规</string>
    <string name="common_search_engine">搜索引擎</string>
    <string name="common_setting_search_engine_dialog_title">设置默认搜索引擎</string>
    <string name="common_setting_ua_dialog_title">设置浏览器标识</string>
    <string name="common_show_statusbar">显示状态栏</string>
    <string name="common_smart_no_map">智能无图</string>
    <string name="common_smart_page">智能拼页</string>
    <string name="common_toolbar_style">网页工具栏样式</string>
    <string name="common_toolbar_style_dialog_3btn_text">3按钮样式（可上滑回首页）</string>
    <string name="common_toolbar_style_dialog_3btn_text_short">3按钮样式</string>
    <string name="common_toolbar_style_dialog_5btn_text">5按钮样式（不可上滑回首页）</string>
    <string name="common_toolbar_style_dialog_5btn_text_short">5按钮样式</string>
    <string name="common_toolbar_text">工具栏</string>
    <string name="common_ua_setting">UA设置</string>
    <string name="confirm">确定</string>
    <string name="context_menu_free_copy_copy">复制</string>
    <string name="context_menu_free_copy_open">转到</string>
    <string name="context_menu_free_copy_search">搜索</string>
    <string name="context_menu_free_copy_select_all">全选</string>
    <string name="context_menu_free_translate">翻译</string>
    <string name="context_menu_open_pic_viewer">进入看图</string>
    <string name="context_menu_search_in_page">页内查找</string>
    <string name="context_menu_webview_copy_link">复制链接地址</string>
    <string name="context_menu_webview_copy_link_toast_text">复制成功</string>
    <string name="context_menu_webview_enable_smart_no_image">智能无图</string>
    <string name="context_menu_webview_free_copy">自由复制</string>
    <string name="context_menu_webview_open_in_background_window">后台打开</string>
    <string name="context_menu_webview_open_new_window">新窗口打开</string>
    <string name="context_menu_webview_paste">粘贴</string>
    <string name="context_menu_webview_save_image">保存图片</string>
    <string name="context_menu_webview_search_image">以图搜图</string>
    <string name="context_menu_webview_show_image">显示图片</string>
    <string name="context_menu_webview_useradblock">标记广告</string>
    <string name="crash_recovery_banner_content">点击恢复上次退出时未关闭的页面</string>
    <string name="default_browser_clear_fail_toast">默认设置尚未完全清除，请再次尝试</string>
    <string name="download_dialog_tips">当前为非WIFI网络,下载将会耗费流量</string>
    <string name="input_enhance_keyword_clipboard">剪切板</string>
    <string name="input_enhance_keyword_cn">.cn</string>
    <string name="input_enhance_keyword_com">.com</string>
    <string name="input_enhance_keyword_dot">.</string>
    <string name="input_enhance_keyword_org">.org</string>
    <string name="input_enhance_keyword_slash">/</string>
    <string name="input_enhance_keyword_wap">wap.</string>
    <string name="personal_login_page_subtitle">手机号登录无需注册</string>
    <string name="personal_login_page_title">登录</string>
    <string name="quark_lab_above_text">欢迎使用</string>
    <string name="quark_lab_below_text">夸克实验室Krauq Lab</string>
    <string name="quark_lab_tip_text">可参与的实验（实验随时可能下架）</string>
    <string name="shortcut_menu_setting_switch_subtitle">开启后可以在浏览网页时在右侧划出快捷工具</string>
    <string name="shortcut_menu_setting_switch_title">开启快捷工具</string>
    <string name="shortcut_menu_setting_tip_text">添加快捷工具(最多4个)</string>
</resources>