<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f0901b1">
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_wap" android:layout_width="UNKNOWN_DATA_0x7f0901af" android:layout_height="match_parent" android:layout_marginRight="@dimen/input_enhance_wap_right_margin" android:text="@string/input_enhance_keyword_wap" />
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_com" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x7f0901af" android:layout_height="match_parent" android:layout_marginRight="@dimen/input_enhance_com_right_margin" android:text="@string/input_enhance_keyword_com" />
    <com.ucpro.ui.widget.TextView android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:background="@color/input_enhance_divider_color" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x7f0901ac" android:layout_height="UNKNOWN_DATA_0x7f0901aa" android:layout_marginRight="@dimen/input_enhance_divider_right_margin" />
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_clipboard" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="@dimen/input_enhance_clipboard_right_margin" android:text="@string/input_enhance_keyword_clipboard" />
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_org" android:layout_width="UNKNOWN_DATA_0x7f0901af" android:layout_height="match_parent" android:layout_marginRight="@dimen/input_enhance_clipboard_right_margin" android:text="@string/input_enhance_keyword_org" />
</LinearLayout>
