<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0901b1">
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_dot" android:layout_width="UNKNOWN_DATA_0x7f0901af" android:layout_height="match_parent" android:layout_marginLeft="@dimen/input_enhance_dot_left_margin" android:text="@string/input_enhance_keyword_dot" android:singleLine="true" />
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_slash" android:layout_width="UNKNOWN_DATA_0x7f0901af" android:layout_height="match_parent" android:layout_marginLeft="@dimen/input_enhance_slash_left_margin" android:text="@string/input_enhance_keyword_slash" android:singleLine="true" />
    <com.ucpro.ui.widget.TextView android:textSize="@dimen/input_enhance_keyword_text_size" android:textColor="@color/input_enhance_keyword_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/keyword_cn" android:layout_width="UNKNOWN_DATA_0x7f0901af" android:layout_height="match_parent" android:layout_marginLeft="@dimen/input_enhance_cn_left_margin" android:text="@string/input_enhance_keyword_cn" android:singleLine="true" />
</LinearLayout>
