<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0900be">
    <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_titlebar_title_size" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/bm_tv_1" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0900be" android:text="@string/bookmark_delete" android:layout_weight="1.0" />
    <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_titlebar_title_size" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/bm_tv_2" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0900be" android:text="@string/bookmark_move" android:layout_weight="1.0" />
    <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_titlebar_title_size" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/bm_tv_3" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0900be" android:text="@string/bookmark_edit" android:layout_weight="1.0" />
    <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_titlebar_title_size" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/bm_tv_4" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0900be" android:text="@string/bookmark_complete" android:layout_weight="1.0" />
    <FrameLayout android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/bm_fl" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0900be" android:layout_weight="1.0">
        <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/common_titlebar_title_size" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/bm_tv_5" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f0900be" android:drawablePadding="@dimen/bookmark_toolbar_drawable_padding" />
    </FrameLayout>
</LinearLayout>
