<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/download_dialog_fl_tips" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f09015a">
        <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/download_dialog_tips_text_size" android:ellipsize="end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/download_dialog_tv_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/download_dialog_text_margin_left" android:layout_marginRight="@dimen/download_dialog_text_margin_right" android:text="@string/download_dialog_tips" android:singleLine="true" />
    </FrameLayout>
    <FrameLayout android:id="@id/download_dialog_fl_content_bg" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f090151">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/download_dialog_item_margin_top">
            <ImageView android:id="@id/download_dialog_iv_icon" android:layout_width="UNKNOWN_DATA_0x7f090152" android:layout_height="UNKNOWN_DATA_0x7f090152" android:layout_marginLeft="@dimen/download_dialog_text_margin_left" android:scaleType="centerCrop" android:adjustViewBounds="true" />
            <LinearLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/download_dialog_inner_margin_left" android:layout_marginRight="@dimen/download_dialog_text_margin_right">
                <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/download_dialog_content_title_text_size" android:ellipsize="middle" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/download_dialog_tv_content_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
                <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/download_dialog_content_content_text_size" android:ellipsize="end" android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/download_dialog_tv_content_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/download_dialog_inner_margin_top" android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/download_dialog_content_title_text_size" android:id="@id/download_dialog_tv_cancel" android:padding="@dimen/download_dialog_confirm_cancel_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/download_dialog_text_margin_left" android:layout_marginBottom="@dimen/download_dialog_confirm_cancel_margin_bottom" android:text="@string/bookmark_cancel" android:layout_centerVertical="true" />
            <com.ucpro.ui.widget.auto.theme.ATTextView android:textSize="@dimen/download_dialog_content_title_text_size" android:id="@id/download_dialog_tv_ok" android:padding="@dimen/download_dialog_confirm_cancel_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/download_dialog_text_margin_right" android:layout_marginBottom="@dimen/download_dialog_confirm_cancel_margin_bottom" android:text="@string/bookmark_ok" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>
